Solving 2021 Day 1 (#7)
* Solving 2021 Day 1
* Solving Day 1, Part 2